Fix:  date display on mobile Income page

--- a/src/app/(privateProfile)/profitMoney/profitMoney.module.scss
+++ b/src/app/(privateProfile)/profitMoney/profitMoney.module.scss
@@ -88,7 +88,7 @@
 
 	@media (max-width: 490px) {
 		& {
-			height: 82px;
+			height: 100%;
 			gap: 14px;
 		}
 	}
@@ -140,7 +140,7 @@
 
 	@media (max-width: 490px) {
 		& {
-			padding: 10px 26px;
+			padding: 10px 15px;
 			width: 49%;
 			gap: 4px;
 		}
